Fix navbar z-index

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -9,6 +9,7 @@
   padding: 20px 0;
   background-color: transparent;
   transition: all 0.4s ease-in-out;
+  z-index: 10;
 
   &-inner {
     display: flex;
@@ -25,6 +26,7 @@
     padding: 20px 0;
     background-color: #154599;
     transition: all 0.4s ease-in-out;
+    z-index: 10;
 
     button path {
       fill: #ffffff;
